[tool.poetry]
name = "masked-measurement"
version = "0.1.0"
description = ""
authors = ["dspoka <dspoka@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
numpy = "1.21.5"
names = "^0.3.0"
datasets = "^1.0.2"
spacy = "^3.2.1"
matplotlib = "^3.3.2"
jsonlines = "^3.0.0"
flyingsquid = "^0.0.0-alpha.0"
pgmpy = "^0.1.12"
omegaconf = "^2.0.2"
hydra-core = "^1.0.3"
termcolor = "^1.1.0"
#hydra = "^2.5"

sympy = "^1.7.1"

pint = "^0.16.1"
vulture = "^2.2"
transformers = "^4.2.2"
sentencepiece = "^0.1.96"
pandas = "1.1.5%"
scikit-learn = ">=0.20.2,<0.25.0"
hydra-colorlog = "^1.1.0"
#torchtext = "^0.10.1"
#pygtrie = "^2.4.2"
#pytesseract = "^0.3.8"
#tensorboard = "^2.7.0"
#tensorboard-plugin-profile = "^2.5.0"
MulticoreTSNE = "^0.1"
mlxtend = "^0.19.0"




[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"
mypy = "^0.910"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
